--- a/index.html
+++ b/index.html
@@ -41,7 +41,6 @@
             border: none;
         }
     </style>
-    <meta name="viewport" content="width=device-width, initial-scale=4.0">
 </head>
 
 
@@ -52,8 +51,9 @@
         <div>
             <h1>Nafish Imtiaz Imti</h1>
             <p><b>Present Address: </b> Birulia, Savar, Dhaka</p>
-            <p><b>Cell no: </b>01884531301</p>
-            <p><b>Email: </b><a href="mailto:imti2305101930@diu.edu.bd">imti2305101930@diu.edu.bd</a> </p>
+            <p><b>Cell no: </b><strong><a href="tel:+8801884531301">+8801884531301</a></strong></p>
+            <p><b>Email: </b><strong><a href="mailto:imti2305101930@diu.edu.bd">imti2305101930@diu.edu.bd</a></strong>
+            </p>
             <p><b>Site: </b><a href="https://sites.google.com/diu.edu.bd/nafishimatiazimti" target="_blank"
                     title="redirect to google site">https://sites.google.com/diu.edu.bd/nafishimatiazimti</a> </p>
         </div>
@@ -153,10 +153,10 @@
                 </div>
             </div>
         </section>
-<section style="text-align: right; padding-right: 5%;">
-    <img src="https://i.postimg.cc/qq6YTwdQ/signature-2.png" alt="Signature" height="50px" width="100px">
-    <div>Signature 12.05.2025</div>
-</section>
+        <section style="text-align: right; padding-right: 5%;">
+            <img src="https://i.postimg.cc/qq6YTwdQ/signature-2.png" alt="Signature" height="50px" width="100px">
+            <div>Signature 12.05.2025</div>
+        </section>
 
     </div>
 </body>
